Add Windows installer details and other improvements to 0.7.0 release notes

--- a/_posts/2023-07-05-pencil2d-0.7.0-release.md
+++ b/_posts/2023-07-05-pencil2d-0.7.0-release.md
@@ -1,21 +1,24 @@
 ---
 layout: post
-title: Pencil2D v0.6.7
+title: Pencil2D v0.7.0 – Exciting New Features!
 tagline: ""
 categories: "Release Note"
 author: "The Pencil2D Team"
 published: false
 comments: false
-
+excerpt_separator: <!-- excerpt end -->
 ---
 
-It's been long overdue... but here it is! Pencil2D release 0.6.7
+It's been long overdue... but here it is: Pencil2D release 0.7.0!
 
-We've been working on this release for more than 2 years, a release which packs **390+ commits**, and boy do we have things to show! A much awaited re-designed camera system, Timeline dragging and exposure improvements, Adjustable layer opacity, Repositioning content of multiple frames, Perspective grids and more.
+We've been working on this release for more than two years, a release which packs **more than 450 commits**, and boy do we have things to show! A much awaited re-designed camera system, timeline dragging and exposure improvements, adjustable layer opacity, repositioning content of multiple frames, perspective grids and more.
 
-<center><h1><a href="https://www.pencil2d.org/download">Download Pencil2D v0.6.7 Now!</a></h1></center>
+<!-- excerpt end -->
 
-> _**Note**: Some of the legacy builds **may not be available** currently, since we depend on external maintainers to finalize the release cycle. If the latest version is not available for your current OS or system architecture please let us know through our [dedicated forum][0]._
+[Download Pencil2D 0.7.0 Now!](https://www.pencil2d.org/download)
+{:style="font-size:xx-large;text-align:center"}
+
+> _**Note**: Some of the legacy builds **may not be available** yet, since we depend on external maintainers to finalize the release cycle. If the latest version is not available for your current OS or system architecture please let us know through our [dedicated forum][0]._
 
 [0]: https://discuss.pencil2d.org/
 
@@ -112,12 +115,18 @@ Add gif or video of feature
 
 ### Windows Installer [#848](https://github.com/pencil2d/pencil/pull/848)
 
-Add some words about the feature
+On Windows, Pencil2D has traditionally been distributed as a simple self-contained ZIP archive. This has a number of advantages, such as minimal impact on the system configuration, simple removal once you no longer need the software or the ability to easily switch between different versions of Pencil2D.
+
+However, we noticed that this method of distribution also caused a number of issues, particularly for non-technical users who are not familiar with it. Some did not know how to extract the file, others were confused by the lack of a dedicated uninstaller, and many were greeted by frustrating error messages concerning missing DLL files.
+
+To address these issues, we're now providing an installer for Pencil2D, as many Windows users have come to expect from their programs. The installer will ensure that all the DLL files Pencil2D needs are available, file type associations and a start menu shortcut are set up correctly, and an uninstaller is available from the apps page in your system settings which allows you to easily remove Pencil2D when you no longer need it. Of course, the traditional ZIP files also continue to be available to those who prefer them!
 
 _________________________________________
 ## Enhancements/Changes
 ### Interface:
 + Introduced a comprehensive new icon set - [#1356](https://github.com/pencil2d/pencil/issues/1356), [#1361](https://github.com/pencil2d/pencil/pull/1361)
+
+  Check out [our behind the scenes blog post]({% post_url 2024-05-17-icon-redesign %}) to learn more about the work that went into this redesign!
 + Replaced the zoom text on the status bar with an interactive control - [#1442](https://github.com/pencil2d/pencil/pull/1442)
 + Added help text for the currently active tool to the status bar - [#1442](https://github.com/pencil2d/pencil/pull/1442)
 + Added toolbars for commonly used actions - [#1468](https://github.com/pencil2d/pencil/pull/1468)
@@ -218,15 +227,9 @@ _________________________________________
 
 Here is a non-exhaustive list of bugs that we are already aware of, but were unable to fix in this release. Rest assured, we will do our best to fix all of them eventually.
 
-<Insert known issues>
+\<Insert known issues>
 
 ## How can I help?
 
-In case you missed our announcement on social media, you can now upload your Pencil2D project [here](https://www.pencil2d.org/contribute/share.html) to help Pencil2D development.
-
-With a project library, our dev team will be able to test new features and detect bugs more effectively. We are still looking for more projects from our users so please consider sharing them with us if you have any. The projects are invaluable to us even if you just share them privately.
-
-To those who have already shared your work with us, we are very grateful for your help. Some of the fixes in this very release would not have been possible without you.
-
-Pencil2D is developed by passionate volunteers in their spare time. You can become one too, there are many ways to help other than programming! Please visit [Contribute Page](https://www.pencil2d.org/contribute/) for further information.
+Pencil2D is developed by passionate volunteers in their spare time. You can become one too, there are many ways to help other than programming! Please visit the [Contribute page](https://www.pencil2d.org/contribute/) for further information.
 
