Mention Qt 6 source compatibility in 0.7.0 release notes

--- a/_posts/2023-07-05-pencil2d-0.7.0-release.md
+++ b/_posts/2023-07-05-pencil2d-0.7.0-release.md
@@ -55,6 +55,7 @@ _______________________________________________
 Add gif or video of feature
 
 ### Reposition content of multiple frames - [#1325](https://github.com/pencil2d/pencil/pull/1325)
+
 Write details about feature ...
 
 ### Timeline UI/UX - Exposure features [#1343](https://github.com/pencil2d/pencil/pull/1343)
@@ -215,6 +216,7 @@ _________________________________________
 + Added update information to our AppImages - [#1680](https://github.com/pencil2d/pencil/pull/1680)
 + Added MIME type information to .pclx files - [#1698](https://github.com/pencil2d/pencil/pull/1698)
 + Improved robustness of project save/load logic - [#1710](https://github.com/pencil2d/pencil/pull/1710)
++ Added compatibility with Qt 6 when building Pencil2D from its source code - [#1743](https://github.com/pencil2d/pencil/pull/1743)
 + Clarified licence of certain files incorporated from the Qt Project - [#1757](https://github.com/pencil2d/pencil/pull/1757)
 + Added a custom start menu tile for Windows versions that support them - [#1787](https://github.com/pencil2d/pencil/pull/1787)
 + Added macOS builds for Apple Silicon - [#1835](https://github.com/pencil2d/pencil/pull/1835)
