Swap title & tagline for clearer communication

--- a/_posts/2024-06-19-pencil2d-0.7.0-rc1-release.md
+++ b/_posts/2024-06-19-pencil2d-0.7.0-rc1-release.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Calling all users, new release incoming!"
-tagline: "Pencil2D v0.7.0 Release Candidate 1 is now available for testing!"
+title: "Pencil2D v0.7.0 Release Candidate 1 is now available for testing!"
+tagline: "Calling all users, new release incoming!"
 categories: "News"
 author: "The Pencil2D Team"
 date: "2024-06-19"
