Small fixes to to the 0.7.0-rc1 news post

--- a/_posts/2024-06-19-pencil2d-0.7.0-rc1-release.md
+++ b/_posts/2024-06-19-pencil2d-0.7.0-rc1-release.md
@@ -17,9 +17,9 @@ Since the last stable Pencil2D release, we’ve been hard at [work behind-the-sc
 
 Right now we are testing what will likely become v0.7.0 of Pencil2D, and it would help us out a lot if as many of our wonderful users as possible could give this version a try!
 
-This release candidate contains a whole lot of bug fixes and new features, the full list of which will be shared during the official release. The purpose of this brief testing period is to make sure that there aren’t any major issues that we've missed.
+This release candidate contains a whole lot of bug fixes and new features, the full list of which will be shared during the final release of v0.7.0. The purpose of this brief testing period is to make sure that there aren’t any major issues that we've missed.
 
-The more people we get to test this "release candidate" version, the more confident we can be that the official release will provide the best experience possible for all our users. We hope to make the new release official within the next couple of weeks.
+The more people we get to test this release candidate, the more confident we can be that the final release will provide the best experience possible for all our users. We hope to make the new release official within the next couple of weeks.
 
 ## Download the Release Candidate
 
@@ -40,11 +40,11 @@ You can have multiple versions of Pencil2D installed on your computer, but pleas
 
 Thank you for taking the time to read this, and a big thank you to everyone who has helped test the [nightly builds][nightly] or will help test this release candidate. Pencil2D is created and maintained by a very small group of volunteers and it would be impossible for us to thoroughly test it without the help of our community.
 
-If you have any questions about this new release, there are multiple channels you can reach us through. Either our [Discord server][discord] or our [forums][forums] are good places to bring up any questions and share feedback on any testing about this version.
+If you have any questions about this new release, there are multiple channels you can reach us through. Either our [Discord server][discord] or our [forums][forums] are good places to bring up any questions and share feedback from testing.
 
-On our Discord server, please use the `#help-me` channel for questions and the `#bug-discussion` channel for testing feedback. On our forums, tag your posts with the `release-candidate` tag and place them in the "Installing Pencil2D/How to" category for questions and the "Bug Reports" category for feedback.
+On our Discord server, please use the `#help-me` channel for questions and the `#bug-discussion` channel for testing feedback. On our forums, tag your posts with the `release-candidate` tag and place them in the `Installing Pencil2D/How to` category for questions and the `Bug Reports` category for feedback.
 
-Also keep an eye on the `#general` channel in Discrod as we will be holding an animation challenge there shortly to promote the upcoming release and may have other things in the works as well 😉
+Also keep an eye on the `#general` channel in Discord as we will be holding an animation challenge there shortly to promote the upcoming release and may have other things in the works as well 😉
 
 [nightly]: https://www.pencil2d.org/download/nightly/
 [discord]: https://discord.gg/8FxdV2g
