Publish the 0.7.0-rc1 news post

--- a/_posts/2024-06-19-pencil2d-0.7.0-rc1-release.md
+++ b/_posts/2024-06-19-pencil2d-0.7.0-rc1-release.md
@@ -5,7 +5,7 @@ tagline: "Calling all users, new release incoming!"
 categories: "News"
 author: "The Pencil2D Team"
 date: "2024-06-19"
-published: false
+published: true
 comments: false
 ---
 
