Add information about layer opacity

--- a/_posts/2023-07-05-pencil2d-0.7.0-release.md
+++ b/_posts/2023-07-05-pencil2d-0.7.0-release.md
@@ -49,6 +49,35 @@ _______________________________________________
 ## Feature highlights
 
 ### Adjustable Layer/Keyframe opacity - [#1355](https://github.com/pencil2d/pencil/pull/1355), [#459](https://github.com/pencil2d/pencil/issues/459)
+Back in 2020, David Lamhauge made a proposal on how to introduce adjustable layer/keyframe opacity, which has always been a much requested feature. The proposal made it into our master branch on the 10 of March 2021.
+
+<img width="287" alt="image" src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/65669414-584b-4554-a7e7-f4fcbbf2e0e3">
+
+#### Opacity
+When you open the window, you have a few options to choose from, giving you more control over how you can change the opacity of one or more keyframes.
+
++ Active keyframe
+Allows you to change the opacity of the current keyframe.
+
++ Selected keyframe(s)
+Allows you to change the opacity of one or more selected keyframes.
+
++ Layer
+Allows you to change the opacity of all keyframes on that specific layer.
+
+#### Fade in / Fade out
+Imagine a classic scenario where you want to make an item disappear over a few keyframes, previously this couldn't be done except by using a brush with an alpha value, and gradually drawing it with less alpha. The amount of work that required in Pencil2D made it a non starter... Well now it's finally possible!
+
+Simply start by selecting 3 or more keyframes you want to fade in or out on the timeline, then click on the "Fade in" or "Fade out" button in the Layer opacity window.
+
+The result should be an item going from 100% to 0% or 0 to 100%.
+
+You can however also choose to fade using a relative opacity, say if your first frame has an opacity of 50% and you select "fade in", the following frames will gradually increase their opacity until the last is fully opaque.
+
+***Known issue:***
++ Fade functionality doesn't actually fully fade in or fade out - [#1855](https://github.com/pencil2d/pencil/issues/1855)
+
+<br>
 
 ### A re-designed camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
 
