Add details about the new camera features

--- a/_posts/2023-07-05-pencil2d-0.7.0-release.md
+++ b/_posts/2023-07-05-pencil2d-0.7.0-release.md
@@ -79,10 +79,56 @@ You can however also choose to fade using a relative opacity, say if your first 
 
 <br>
 
-### A re-designed camera system [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
+### Camera system makeover [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
+The camera system has had a huge makeover. We have added features ranging from an entirely new and better way to interact with the camera to having a wide range of easings for you to move the camera around. You will also be able to visually see the keyframe path on the canvas as well as interact with it.
 
-Add gif or video of feature
+***What's new:***
++ A new and object based camera system
++ A tool panel for the new camera functionalities
++ The ability to see interpolations on the canvas
++ A wide range of easings to choose from:
 
+<video autoplay controls height=400 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/8c9635aa-af73-4349-9d1b-e73439c65c95"/>
+
+We always try to keep the interface as simple as possible in Pencil2D. As such, there are no new tools you have to learn to use the camera; instead, the existing tools in the toolbox change depending on the layer type.
+
+To interact with the camera, select the ***Move*** tool and a keyframe on the camera layer. This will enable you to see the handles of the camera.
+
+#### Object based interaction
+Where the old camera system was a part of the viewport, making it more of a WYSIWYG (what you see is what you get), the new system is object-based, meaning you can now modify the camera's placement, rotation, and size without altering the view.
+
+| Translate | Rotate | Scale |
+| --------- | ------ | ----- |
+| <video autoplay controls height=200 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/7789320e-be19-42dc-8008-ee26923162a0"/> | <video controls autoplay height=200 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/cc87fe5e-2309-454d-b9e8-4ec2020e4b33"/> | <video autoplay controls height=200 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/844820c0-6807-45fc-9947-c29648ab96b8"/> |
+| Moving the camera is as simple as dragging it anywhere within the bounds of its area. | To rotate the camera, click and hold on the top circular handle. | To change the perceived size of the camera, click and hold-drag on any of the squared corners. Dragging diagonally outward will make objects seem smaller, while dragging inward will make objects appear larger. |
+
+#### Camera tool options
+To house some of the new camera features, we've added camera functionalities to the options panel. From the panel, you will be able to reset the camera's current transformations, either all of them or one by one.
+
+<img width="277" alt="image" src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/d04a5f38-18f2-42de-9d68-fdb55d4a0a4a"> <video autoplay controls height=400 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/85324c42-2f34-403d-97b9-37c32618011e" />   
+
+When you click on the "Show path" checkbox, an entirely new feature unfolds. You will now be able to see and interact with the camera's curve on the canvas.
+
+<video autoplay controls height=400 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/7e349ff1-d356-46f2-9877-94569f196d06"/>
+
+Onion skinning is a vital feature in animation; being able to see what has and what will occur allows the animator to make changes with ease, so naturally, like with the other layer types, you can now utilize the functions of the onion skin panel for camera keyframes too.
+
+For example, if you only care about seeing the previous and/or next keyframe, you can enable "Show keyframe only," which will hide in-between interpolations, or if you only want to see the previous keyframe, simply toggle "Previous frames."
+
+<video autoplay controls height=400 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/6292b939-9673-4edc-8426-51bea91ac858"/>
+
+To enable interaction with a keyframe path, you first have to scrub to an in-between frame. While the timeline scrubber is in between keyframes, you can change the trajectory of one or multiple paths.
+
+If you need to change the position of the camera again, simply scrub back to the nearest keyframe and drag the camera elsewhere. Once a keyframe's path handle has been moved, it will stay in place until the path for that particular frame has been reset again.
+
+#### Camera easings
+Previously, it was only possible to make linear-based movements for the camera, which, while being an okay starting point, didn't allow for much flexibility. Linear-based movement is considered to be anything but organic; as such, it's not something you should rely too much on; instead, experiment with the new easing types we've added, such as "In: Slow", "In: Fast" and then "Out: Faster".
+
+<video autoplay controls height=400 src="https://github.com/pencil2d/pencil2d.github.io/assets/1045397/9200cfa5-9bbb-43e5-98ef-66908d0358aa"/>
+
+This feature is currently only possible to access through the timeline, via a new right-click menu. From the menu, you can select from a wide range of easing types to control the movement of the camera. Whether you're trying to ease in, out, in-out, or out-in, we have you covered. You can see the current easing type at the top of the menu, as well as near the handle on the canvas.
+
+<br>
 ### Reposition content of multiple frames - [#1325](https://github.com/pencil2d/pencil/pull/1325)
 
 Write details about feature ...
