Add missing relative_url filters

--- a/_posts/2023-07-05-pencil2d-0.7.0-release.md
+++ b/_posts/2023-07-05-pencil2d-0.7.0-release.md
@@ -97,7 +97,7 @@ Where the old camera system was a part of the viewport, making it more of a WYSI
 
 | Translate | Rotate | Scale |
 | --------- | ------ | ----- |
-| <video autoplay controls height=200 src="{{ "/images/pencil2d-0.7.0-camera-translate.mp4" | relative_url }}"/> | <video controls autoplay height=200 src="{{ "/images/pencil2d-0.7.0-camera-rotate.mp4" }}"/> | <video autoplay controls height=200 src="{{ "/images/pencil2d-0.7.0-camera-scale.mp4" }}"/> |
+| <video autoplay controls height=200 src="{{ "/images/pencil2d-0.7.0-camera-translate.mp4" | relative_url }}"/> | <video controls autoplay height=200 src="{{ "/images/pencil2d-0.7.0-camera-rotate.mp4" | relative_url }}"/> | <video autoplay controls height=200 src="{{ "/images/pencil2d-0.7.0-camera-scale.mp4" | relative_url }}"/> |
 | Moving the camera is as simple as dragging it anywhere within the bounds of its area. | To rotate the camera, click and hold on the top circular handle. | To change the perceived size of the camera, click and hold-drag on any of the squared corners. Dragging diagonally outward will make objects seem smaller, while dragging inward will make objects appear larger. |
 
 #### Camera tool options
