--- a/_posts/2023-07-05-pencil2d-0.7.0-release.md
+++ b/_posts/2023-07-05-pencil2d-0.7.0-release.md
@@ -74,9 +74,6 @@ The result should be an item going from 100% to 0% or 0 to 100%.
 
 You can however also choose to fade using a relative opacity, say if your first frame has an opacity of 50% and you select "fade in", the following frames will gradually increase their opacity until the last is fully opaque.
 
-***Known issue:***
-+ Fade functionality doesn't actually fully fade in or fade out - [#1855](https://github.com/pencil2d/pencil/issues/1855)
-
 ### Camera system makeover [#1584](https://github.com/pencil2d/pencil/pull/1584), [#1587](https://github.com/pencil2d/pencil/pull/1587), [#1732](https://github.com/pencil2d/pencil/pull/1732), [#1738](https://github.com/pencil2d/pencil/pull/1738)
 The camera system has had a huge makeover. We have added features ranging from an entirely new and better way to interact with the camera to having a wide range of easings for you to move the camera around. You will also be able to visually see the keyframe path on the canvas as well as interact with it.
 
@@ -127,8 +124,23 @@ Previously, it was only possible to make linear-based movements for the camera, 
 This feature is currently only possible to access through the timeline, via a new right-click menu. From the menu, you can select from a wide range of easing types to control the movement of the camera. Whether you're trying to ease in, out, in-out, or out-in, we have you covered. You can see the current easing type at the top of the menu, as well as near the handle on the canvas.
 
 ### Reposition content of multiple frames - [#1325](https://github.com/pencil2d/pencil/pull/1325)
+This feature allows you to reposition the content of multiple keyframes, across multiple layers.
 
-Write details about feature ...
+To access it, locate the "Animation" menu in the top bar, and find the item called "Reposition Selected Frames".
+<img width="1000" alt="image" src="{{ "/images/pencil2d-0.7.0-reposition-selected-frames-interface.png" | relative_url }}">
+
+Clicking on the menu item reveals the "Reposition Frames" dialog. The top half of the dialog shows which keyframes are selected.
+The bottom half makes it possible to reposition keyframes across other layers.
+
+Here's how it works:
+<video autoplay controls height=400 src="{{ "/images/pencil2d-0.7.0-reposition-selected-frames-showcase.mp4" | relative_url }}"/>
+
+In the video you can see that the content of the keyframe 1 of "Bitmap Layer 2" are being moved from the top left corner, to the bottom left corner and afterwards the same process is being applied to the other keyframes.
+
+Note that because of the limitations of the current undo/redo system, repositioning may not always be undo'able.
+
+***Known issue:***
++ The cancel button doesn't work, use the close in top left/right corner depending on the platform.
 
 ### Timeline UI/UX - Exposure features [#1343](https://github.com/pencil2d/pencil/pull/1343)
 
