--- a/_posts/2023-07-05-pencil2d-0.7.0-release.md
+++ b/_posts/2023-07-05-pencil2d-0.7.0-release.md
@@ -195,8 +195,15 @@ Now because of the reworked logic, this is no longer neccesary and we can instea
 In addition to that every transform will also now be undo'able.
 
 ### Perspective grids! [#1352](https://github.com/pencil2d/pencil/pull/1352)
+In addition to having various grid types for layout, we now also have the ability to enable one, two or three point perspective.
 
-Add gif or video of feature
+<img width="333" alt="perspective-grid-types" src="{{ '/images/pencil2d-0.7.0-perspective-grid-types.png' | relative_url }}">
+
+| One point                  | Two point              | Three point         |
+| ---------------------------|------------------------| ------------------- |
+| <img width="400" alt="one-point-perspective" src="{{ '/images/pencil2d-0.7.0-one-point-perspective.png' | relative_url }} "> | <img width="400" alt="two-point-perspective" src="{{ '/images/pencil2d-0.7.0-two-point-perspective.png' | relative_url }}"> |<img width="400" alt="three-point-perspective" src="{{ '/images/pencil2d-0.7.0-three-point-perspective.png' | relative_url }}"> |
+
+To interact with a perspective grid, select the move tool and move the dot appearing on top of the vanishing point.
 
 ### Windows Installer [#848](https://github.com/pencil2d/pencil/pull/848)
 
