Redirect to 0.7.0 release post from originally intended location

--- a/_posts/2024-10-17-pencil2d-0.7.0-release.md
+++ b/_posts/2024-10-17-pencil2d-0.7.0-release.md
@@ -7,6 +7,9 @@ author: "The Pencil2D Team"
 published: true
 comments: false
 excerpt_separator: <!-- excerpt end -->
+# Redirect from the original URL that is embedded in the
+# released AppStream metadata and can no longer be changed
+redirect_from: /2024/07/pencil2d-0.7.0-release.html
 ---
 
 It's been long overdue… but here it is: Pencil2D release 0.7.0!
